fix bug with overflow text in tables

--- a/example_gen/style.css
+++ b/example_gen/style.css
@@ -100,6 +100,9 @@ tr {
     display: block;
     padding-left: 10px;
     background-color: white;
+    overflow:hidden;
+    white-space:nowrap;
+    text-overflow:ellipsis;
 }
 
 tr:hover {
